tests/programs/errors/sized_type_on_non_stream.flow
module tests.errors.sized_type_on_non_stream

fn main(): none {
    let x: int[64] = 0
}
